Removed violations